--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,7 @@ main{
     grid-template-columns: 1fr;
     grid-template-rows: auto;
     gap: 1rem;
-    background-color: blanchedalmond;
+    background-color: white;
 }
 figure{}
 img{
@@ -36,25 +36,49 @@ img{
     font-family: "Young Serif", serif;
 }
 article{
-background-color: rgba(47, 0, 255, 0.459);
 justify-content: flex-end;
-gap: 2rem;
-height: 16.5rem;
+gap: 1rem;
+height: 13rem;
 }
 h1{
     font-family: "Young Serif", serif;
     font-size: 2.2rem;
     width: 19.9rem;
-    background-color: aliceblue;
+    line-height: 2.2rem;
 }
 p{
     width: 19.9rem;
     font-size: 0.9rem;
-    background-color: aliceblue;
 }
 section{
-    background-color: rgba(47, 0, 255, 0.459);
 }
 .sesao-01{
+height: 14.5rem;
+justify-content: flex-end;
+background-color: #bda208;
+}
+div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #fff7fc;
+    width: 19.9rem;
+    height: 13rem;
+    gap: 1rem;
+    border-radius: 0.6rem;
 
+}
+.preparation{
+    color: #5d233b;
+    font-size: 1.2rem;
+    margin-left: 1.1rem;
+}
+.lista-01{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 13.4rem;
+    margin-left: 3rem;
+    font-size: 1.1rem;
+    
 }
