--- a/styles/style.css
+++ b/styles/style.css
@@ -11,53 +11,95 @@
     font-weight: 400;
     font-style: normal;
   } */
-  
-*{
+
+* {
     margin: 0;
     padding: 0;
 }
-.principal>*{
+
+.principal>* {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-main{
+
+main {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto;
     gap: 1rem;
     background-color: white;
 }
-figure{}
-img{
+
+figure {}
+
+img {
     width: 100%;
 }
-.palav{
+
+.palav {
     font-family: "Young Serif", serif;
 }
-article{
-justify-content: flex-end;
-gap: 1rem;
-height: 13rem;
+
+article {
+    justify-content: flex-end;
+    gap: 1rem;
+    height: 13rem;
 }
-h1{
+
+h1 {
     font-family: "Young Serif", serif;
     font-size: 2.2rem;
     width: 19.9rem;
     line-height: 2.2rem;
 }
-p{
+
+p {
     width: 19.9rem;
     font-size: 0.9rem;
 }
-section{
+
+section {}
+
+.sesao-01 {
+    height: 14.5rem;
+    justify-content: flex-end;
+    background-color: #bda20800;
 }
-.sesao-01{
-height: 14.5rem;
-justify-content: flex-end;
-background-color: #bda208;
+
+.sesao-02 {
+    height: 15.9rem;
+    gap: 1.6rem;
 }
-div{
+
+h2 {
+    width: 19.9rem;
+    font-size: 2rem;
+    margin-top: 1.1rem;
+    background-color: aqua;
+}
+
+.lista-ingred {
+    width: 19.9rem;
+}
+
+.lista-ingred>li {
+    margin-left: 1.6rem;
+}
+
+.sesao-03 {
+    background-color: #e01067;
+}
+
+.lista-instrucoes>li {
+    background-color: blueviolet;
+    width: 18rem;
+    font-size: 0.9rem;
+    margin-left: 2rem;
+
+}
+
+div {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -68,17 +110,19 @@ div{
     border-radius: 0.6rem;
 
 }
-.preparation{
+
+.preparation {
     color: #5d233b;
     font-size: 1.2rem;
     margin-left: 1.1rem;
 }
-.lista-01{
+
+.lista-01 {
     display: flex;
     flex-direction: column;
     gap: 1rem;
     width: 13.4rem;
     margin-left: 3rem;
     font-size: 1.1rem;
-    
+
 }
