--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,7 @@
     font-weight: 400;
     font-style: normal;
   } */
+  @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
 * {
     margin: 0;
@@ -77,6 +78,7 @@ h2 {
     font-size: 2rem;
     margin-top: 1.1rem;
     background-color: aqua;
+    color: #5d233b;
 }
 
 .lista-ingred {
@@ -88,18 +90,25 @@ h2 {
 }
 
 .sesao-03 {
-    background-color: #e01067;
+    background-color: #e0106700;
 }
 .lista-instrucoes{
-   
+    /* list-style-position: inside; */
+}
+li::marker{
+    font-size: 0.9rem;
+    font-family: "Outfit", sans-serif;
+    font-weight: 900;
+    
 }
 .lista-instrucoes>li {
-    background-color: blueviolet;
+    background-color: rgba(137, 43, 226, 0.678);
     width: 18rem;
     font-size: 0.9rem;
     margin-left: 2rem;
     margin-top: 1rem;
-    padding-left: 1rem;
+    padding-left: 1rem; 
+    
 }
 div {
     display: flex;
