--- a/styles/style.css
+++ b/styles/style.css
@@ -86,11 +86,13 @@ h2 {
 
 .lista-ingred>li {
     margin-left: 1.6rem;
+    
 }
 
 .sesao-03 {
-    background-color: #e01067bb;
+    background-color: #e0106700;
     height: 41.4rem;
+    border-bottom: 0.1rem solid rgb(107, 106, 106);
 }
 .lista-instrucoes{
     /* list-style-position: inside; */
@@ -140,5 +142,5 @@ div {
 
 .sesao-04{
     gap: 1rem;
-    background-color: #b9a115;
+    background-color: #b9a01500;
 }
