--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,7 @@
     padding: 0;
 }
 
+
 .principal>* {
     display: flex;
     flex-direction: column;
@@ -25,11 +26,21 @@
 }
 
 main {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   gap: 2.7rem;
+}
+
+article{
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto;
     gap: 1rem;
     background-color: white;
+    background-color: yellow;
+    width: 21rem;
 }
 
 figure {}
@@ -42,22 +53,25 @@ img {
     font-family: "Young Serif", serif;
 }
 
-article {
+.sesao-0 {
     justify-content: flex-end;
     gap: 1rem;
     height: 13rem;
+    background-color: #5d233b;
 }
 
 h1 {
     font-family: "Young Serif", serif;
-    font-size: 2.2rem;
+    font-size: 2.3rem;
     width: 19.9rem;
     line-height: 2.2rem;
+    background-color: wheat;
 }
 
 p {
     width: 19.9rem;
     font-size: 0.9rem;
+    background-color: green;
 }
 
 section {}
@@ -71,6 +85,7 @@ section {}
 .sesao-02 {
     height: 15.9rem;
     gap: 1.6rem;
+    border-bottom: 0.1rem solid rgb(107, 106, 106);
 }
 
 h2 {
