--- a/styles/style.css
+++ b/styles/style.css
@@ -39,6 +39,7 @@ article{
     grid-template-rows: auto;
     gap: 1rem;
     width: 21rem;
+    background-color: green;
 }
 
 figure {}
@@ -88,6 +89,7 @@ h2 {
     font-size: 2rem;
     margin-top: 1.1rem;
     color: #5d233b;
+    background-color: yellow;
 }
 
 .lista-ingred {
@@ -100,6 +102,9 @@ h2 {
 }
 
 .sesao-03 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: #e0106700;
     height: 41.4rem;
     border-bottom: 0.1rem solid rgb(107, 106, 106);
