--- a/styles/style.css
+++ b/styles/style.css
@@ -154,6 +154,8 @@ div {
 }
 
 .sesao-04{
-    gap: 1rem;
-    background-color: #b9a01500;
+    display: flex;
+    flex-direction: column;
+    gap:1rem;
+    background-color: #b9a015de;
 }
