--- a/styles/style.css
+++ b/styles/style.css
@@ -157,5 +157,26 @@ div {
     display: flex;
     flex-direction: column;
     gap:1rem;
-    background-color: #b9a015de;
+    height: 22rem;
+}
+table{
+    background-color: rgba(255, 255, 0, 0.616);
+}
+tr{
+background-color: #5d233b00;
+
+}
+td{
+    border-bottom: 0.1rem solid rgb(107, 106, 106);
+    padding: 0.7rem;
+}
+th{
+text-align:left;
+border-bottom: 0.1rem solid rgb(107, 106, 106);
+padding:0.7rem;
+padding-left: 1rem;
+}
+.coluna-2{
+    color: #5d233b;
+    font-weight: 600;
 }
