--- a/styles/style.css
+++ b/styles/style.css
@@ -80,7 +80,7 @@ section {}
 .sesao-02 {
     height: 15.9rem;
     gap: 1.6rem;
-    border-bottom: 0.1rem solid rgb(107, 106, 106);
+    border-bottom: 0.1rem solid rgba(107, 106, 106, 0.404);
 }
 
 h2 {
@@ -105,7 +105,7 @@ h2 {
     align-items: center;
     background-color: #e0106700;
     height: 41.4rem;
-    border-bottom: 0.1rem solid rgb(107, 106, 106);
+    border-bottom: 0.1rem solid rgba(107, 106, 106, 0.404);
 }
 .lista-instrucoes{
     /* list-style-position: inside; */
@@ -160,23 +160,30 @@ div {
     height: 22rem;
 }
 table{
-    background-color: rgba(255, 255, 0, 0.616);
+    border-collapse: collapse;  
 }
 tr{
-background-color: #5d233b00;
 
 }
 td{
-    border-bottom: 0.1rem solid rgb(107, 106, 106);
+    border-bottom: 0.1rem solid rgba(107, 106, 106, 0.404);
     padding: 0.7rem;
 }
 th{
 text-align:left;
-border-bottom: 0.1rem solid rgb(107, 106, 106);
+border-bottom: 0.1rem solid rgba(107, 106, 106, 0.404);
 padding:0.7rem;
-padding-left: 1rem;
+}
+.calories{
+    font-weight: 100;
+}
+.coluna-1{
+   padding-left: 2rem;
 }
 .coluna-2{
     color: #5d233b;
     font-weight: 600;
+}
+.mod{
+    border-bottom: 0.1rem solid rgba(214, 19, 19, 0);
 }
